# libbmp

./: .gitignore  CMakeLists.txt  Makefile  bmp.c  bmp.h  config.h  config.h.in  config.status  configure  configure.ac  libtool  msg.h  test.c
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  bmp.c  bmp.h  msg.c  msg.h
test/: CMakeLists.txt  libbmp_test1.c  libbmp_test2.c
